========================
django-profile Changelog
========================

Version 0.6.0
-------------------
* Solved some bugs. Thanks to Fabio Varesano.
* Added Traditional Chinese translation. Thanks to Chiu Wei Jia.
* Renamed the setting WEBSEARCH to AVATAR_WEBSEARCH.
* Setting AVATAR_DEFAULT is required, if it's not stablished an exception
  will raise.
* Lot of simplifications. Removed the public/private user selection. It was 
  confusing.
* Model abstraction with django model inheritance. Now the Profile class has 
  been renamed BaseProfile. Thanks to Rob Yates and Alvaro Mouriño.
* Better management of avatars. New templatetag to generate thumbs on the fly.
  Thanks to Alvaro Mouriño.
* Password managament modified to use the new django password management 
  utilities.
* Templates modified to do reverse URL.
* Better management of urls/view variables. Thanks to Alvaro Mouriño.
* Renamed APIKEY setting to GOOGLE_MAPS_API_KEY.
* Templates modified to do reverse URL.
* Added internacionalization of the urls. Credits to Alvaro Stevens.
* Changed the model of userprofile to solve the problem shown on this ticket:
	http://code.google.com/p/django-profile/issues/detail?id=25&can=1
* Django newforms-admin has been merged into trunk on revision [7967]. Newforms
  is now the official form management library, so this version of 
  django-profile has been adapted to make it compatible with the new changes.
* This revision of django-profile is only compatible with django rev. [7967] or
  greater.
* Solved some issues with the form upload library. Thanks to Alvaro Mouriño.
* Make the Continent/Country models compatible with the new newforms-admin
  interface. Thanks to Alvaro Mouriño.
* Corrected a misspellings on the documentation. Thanks to paltman.

Version 0.5.0
-------------
* CSS and HTML formatted with Blueprint CSS 
  (http://code.google.com/p/blueprintcss/).
* Lot of code optimization of Django, HTML, CSS and Javascript.