@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "User login" %}{% endblock %}
@@ -13,7 +13,7 @@
 </script>
 {% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<form action="{% if next %}?next={{ next }}{% endif %}" method="post" accept-charset="utf-8">
 	<fieldset>
 		<legend>{% trans "User login" %}</legend>
@@ -37,7 +37,7 @@
 	</form>
 {% endblock %}
 
-{% block content-related %}
+{% block userprofile_content_related %}
 	<div class="box">
 		<h3>{% trans "Utilities" %}:</h3>
     {# http://code.djangoproject.com/ticket/7239 #}
