@@ -1,10 +1,10 @@
-{% extends "base.html" %}
+{% extends "userprofile/base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans 'Password key expired' %}{% endblock %}
 {% block robots %}noindex,nofollow{% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<div id="notice" class="prepend-4 append-4">
 		<h4>{% trans "The password key you're trying to use is expired. Please, request a new one" %}.</h4>
 	</div>
