@@ -1,4 +1,4 @@
-{% extends "base_2col.html" %}
+{% extends "userprofile/base_2col.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "User registration" %}{% endblock %}
@@ -13,7 +13,7 @@
 </script>
 {% endblock %}
 
-{% block content %}
+{% block userprofile_content %}
 	<form action="" method="post" accept-charset="utf-8">
 	<fieldset>
 		<legend>{% trans "User registration" %}</legend>
@@ -49,7 +49,7 @@
 	</form>
 {% endblock %}
 
-{% block content-related %}
+{% block userprofile_content_related %}
 	<div class="box">
 		<h3>{% trans "Register a new account" %}</h3>
 		<p>{% trans "Joining this community is quick and easy. You only need to fill the form to get access to all the private content" %}.</p>
